opam-version: "1.2"
maintainer: "Frédéric Bour <frederic.bour@lakaban.net>"
authors: ["Frédéric Bour <frederic.bour@lakaban.net>"]
homepage: "https://github.com/let-def/inuit"
doc: "https://let-def.github.io/inuit/doc"
license: "ISC"
dev-repo: "https://github.com/let-def/inuit.git"
bug-reports: "https://github.com/let-def/inuit/issues"
tags: []
available: [ ocaml-version >= "4.01.0"]
depends: [
  "dune" {build & >= "1.0"}
  "grenier" {>= "0.4"}
]
depopts: []
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
