opam-version: "2.0"
maintainer: "Frédéric Bour <frederic.bour@lakaban.net>"
authors: ["Frédéric Bour <frederic.bour@lakaban.net>"]
homepage: "https://github.com/let-def/inuit"
synopsis: "Make interactive text-based user-interfaces in OCaml"
doc: "https://let-def.github.io/inuit/doc"
license: "ISC"
dev-repo: "git+https://github.com/let-def/inuit.git"
bug-reports: "https://github.com/let-def/inuit/issues"
depends: [
  "dune" {>= "1.0"}
  "grenier" {>= "0.4"}
  "ocaml" {>= "4.08.0"}
]
depopts: []
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
